# Django_cmu

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
mysite/cmu/: apps.py  urls.py  views.py
mysite/cmu/static/cmu/: main_page.css  script.js  styles.css
mysite/cmu/templates/cmu/: base.html  base2.html  index.html  main.html
mysite/games/: admin.py  models.py  urls.py  views.py
mysite/games/templates/games/: game_detail.html  games.html  my_game_detail.html  my_games.html
mysite/mysite/: settings.py  urls.py
mysite/users/: forms.py  middleware.py  models.py  urls.py  views.py
mysite/users/templates/users/: create_profile.html  login.html  signup.html
